# dropMath

./: .gitignore  README.md  dconfig
.circleci/: config.yml
docs/html/: index.html  md__home_me_Projects_CPP_dropMath_README.html  pages.html
docs/html/search/: all_0.js
docs/latex/: md__home_me_Projects_CPP_dropMath_README.tex  refman.tex
examples/: Bezier.h  CMakeLists.txt  Makefile  Matrices.h  Vectors.h  common.hpp  examples.cpp
examples/Matrices/: Matrices.cpp
examples/Vector_Example/: CMakeLists.txt  Makefile  Vectors.cpp
header/: dropMath.cpp  dropMath.hpp
test/: .old_Makefile  CMakeLists.txt  Makefile  PowZ_tests.hpp  Timer.hpp  Vector2_tests.hpp  Vector3_tests.hpp  config.h.in  general_tests.hpp  line_box_tests.hpp  run_test.sh  test.cpp  test.elf
